--- a/1_pemrosesan_teks/pemrosesan_teks.ipynb
+++ b/1_pemrosesan_teks/pemrosesan_teks.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "with open('../data/hieroglif.txt') as f:\n",
+    "with open('../data/hieroglif.txt', encoding='utf-8') as f:\n",
     "    teks = f.read()\n",
     "    print(teks)"
    ]
@@ -4400,7 +4400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## http://bit.ly/nlp_evolve_data"
+    "## http://bit.ly/github_nlp_data"
    ]
   },
   {
@@ -4412,24 +4412,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "758\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Daftar stop words\n",
+    "from nltk.corpus import stopwords\n",
+    "print(len(stopwords.words(\"indonesian\")))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8086"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "with open('../cerita.txt', encoding='utf-8') as f:\n",
+    "    teks = f.read()\n",
+    "\n",
+    "# hapus spasi berlebih\n",
+    "teks = re.sub(r' +',' ',teks) # spasi berlebih\n",
+    "teks = re.sub(r'\\n+',' ',teks) # \\n berlebih\n",
+    "teks = teks.lower() # ubah ke huruf kecil\n",
+    "teks = re.sub(r\"[^a-zA-Z]\", \" \", teks)\n",
+    "#print(teks)\n",
+    "kumpulan_kata = teks.split()\n",
+    "len(kumpulan_kata)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4353\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hapus stop words\n",
+    "kumpulan_kata = [w for w in kumpulan_kata \\\n",
+    "                 if w not in stopwords.words('indonesian')]\n",
+    "print(len(kumpulan_kata))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4440,10 +4489,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[('menurut', 'IN'), ('dr', 'NN'), ('x', 'NN'), ('hidup', 'NN'), ('di', 'IN'), ('iklim', 'NN'), ('tropis', 'JJ'), ('membuat', 'VB'), ('air', 'NN'), ('conditioner', 'FW'), ('ac', 'FW'), ('seakan', 'VB'), ('menjadi', 'VB'), ('sebuah', 'NND'), ('kebutuhan', 'NN'), ('pokok', 'NN'), ('tersendiri', 'VB'), ('bagi', 'IN'), ('masyarakatnya', 'NN'), ('seperti', 'IN'), ('pula', 'RB'), ('yang', 'SC'), ('terjadi', 'VB'), ('di', 'IN'), ('indonesia', 'NN'), ('tanpa', 'IN'), ('ac', 'NN'), ('penghuni', 'NN'), ('rumah', 'NN'), ('kerap', 'VB'), ('merasa', 'VB'), ('tak', 'NEG'), ('nyaman', 'JJ'), ('karena', 'SC'), ('udara', 'NN'), ('yang', 'SC'), ('panas', 'JJ'), ('dan', 'CC'), ('lembap', 'VB')]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "teks = \"Menurut Dr. X, Hidup di iklim tropis membuat Air Conditioner (AC) seakan menjadi sebuah kebutuhan pokok tersendiri bagi masyarakatnya. Seperti pula yang terjadi di Indonesia. Tanpa AC, penghuni rumah kerap merasa tak nyaman karena udara yang panas dan lembap.\"\n",
+    "# hapus spasi berlebih\n",
+    "teks = re.sub(r' +',' ',teks) # spasi berlebih\n",
+    "teks = re.sub(r'\\n+',' ',teks) # \\n berlebih\n",
+    "teks = teks.lower() # ubah ke huruf kecil\n",
+    "teks = re.sub(r\"[^a-zA-Z]\", \" \", teks)\n",
+    "kumpulan_kata = teks.split()\n",
+    "\n",
+    "from nltk.tag import CRFTagger\n",
+    "ct = CRFTagger()\n",
+    "ct.set_model_file('../model/all_indo_man_tag_corpus_model.crf.tagger')\n",
+    "hasil = ct.tag_sents([kumpulan_kata])\n",
+    "print(hasil)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4454,10 +4525,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['menurut', 'dr', 'x', 'hidup', 'di', 'iklim', 'tropis', 'membuat', 'air', 'conditioner', 'ac', 'seakan', 'menjadi', 'sebuah', 'kebutuhan', 'pokok', 'tersendiri', 'bagi', 'masyarakatnya', 'seperti', 'pula', 'yang', 'terjadi', 'di', 'indonesia', 'tanpa', 'ac', 'penghuni', 'rumah', 'kerap', 'merasa', 'tak', 'nyaman', 'karena', 'udara', 'yang', 'panas', 'dan', 'lembap']\n",
+      "==================================================\n",
+      "['turut', 'dr', 'x', 'hidup', 'di', 'iklim', 'tropis', 'buat', 'air', 'conditioner', 'ac', 'akan', 'jadi', 'buah', 'butuh', 'pokok', 'sendiri', 'bagi', 'masyarakat', 'seperti', 'pula', 'yang', 'jadi', 'di', 'indonesia', 'tanpa', 'ac', 'huni', 'rumah', 'kerap', 'rasa', 'tak', 'nyaman', 'karena', 'udara', 'yang', 'panas', 'dan', 'lembap']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
+    "print(kumpulan_kata)\n",
+    "print(\"=\"*50)\n",
+    "# buat stemmer\n",
+    "factory = StemmerFactory()\n",
+    "stemmer = factory.create_stemmer()\n",
+    "#lakukan stem\n",
+    "stemmed = [stemmer.stem(w) for w in kumpulan_kata]\n",
+    "print(stemmed)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tes"
+   ]
   },
   {
    "cell_type": "code",
